removed some gap from modual added some code that was error or was needed also corrected profile css

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -105,7 +105,6 @@
   font-size: 16px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
   min-height: 52px;
   color: #212121;
 }
@@ -116,8 +115,8 @@
   font-weight: 500;
   font-size: 16px;
   gap: 8px;
-  color: #212121;
-  opacity: 70%;
+  color: rgb(33, 33, 33, 0.4);
+
   line-height: 110%;
 }
 
@@ -134,9 +133,11 @@
     height: 32px;
   }
   .modal__submit-btn {
-    padding: 12px 24px;
+    padding: 18px 32px;
+    width: 100%;
   }
   .modal__input {
+    margin: 0;
     font-size: 16px;
   }
   .modal__title {
