--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -58,6 +58,10 @@
   background: none;
   text-align: center;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
 }
 .profile__add-btn {
   margin-top: auto;
@@ -65,11 +69,11 @@
   font-family: poppins, sans-serif, Arial;
   font-weight: 500;
   line-height: normal;
-  letter-spacing: normal; /* 0% is unnecessary so i used normal*/
+  letter-spacing: normal;
   font-size: 16px;
   height: 52px;
   border-radius: 8px;
-  padding: 18px 32px;
+  padding: 32px 18px;
   border: none;
   background-color: #212121;
   color: #fcf5e5;
@@ -118,7 +122,7 @@
   .profile__add-btn {
     margin-left: 0;
     width: 100%;
-    padding: 18px 32px;
+    padding: 12px 20px;
   }
   .profile__edit-btn {
     font-size: 16px;
